# Docgettr-Backend

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
docgettr/: hooks.py  install.py  modules.txt  patches.txt  tasks.py
docgettr/docgettr/api/: access_requests.py  ai.py  audit.py  auth.py  catalogue.py  consent.py  documents.py  drive.py  export.py  family.py  otp.py  payments.py  reminders.py  sharing.py  smart_folders.py  subscription.py  trash.py
docgettr/docgettr/doctype/docgettr_access_request/: docgettr_access_request.json  docgettr_access_request.py
docgettr/docgettr/doctype/docgettr_audit_log/: docgettr_audit_log.json  docgettr_audit_log.py
docgettr/docgettr/doctype/docgettr_category/: docgettr_category.json  docgettr_category.py
docgettr/docgettr/doctype/docgettr_consent_record/: docgettr_consent_record.json  docgettr_consent_record.py
docgettr/docgettr/doctype/docgettr_document/: docgettr_document.json  docgettr_document.py
docgettr/docgettr/doctype/docgettr_document_type/: docgettr_document_type.json  docgettr_document_type.py
docgettr/docgettr/doctype/docgettr_document_version/: docgettr_document_version.json  (+1 more)
docgettr/docgettr/utils/: ai_prompts.py  hooks_helpers.py  id_generator.py  jinja_helpers.py  permissions.py  settings.py  tier_caps.py  validators.py
docgettr/fixtures/: docgettr_category.json  docgettr_document_type.json
docgettr/patches/: normalize_user_phones.py
docgettr/templates/: account_deletion_warning.html  reminder_email.html  share_link_email.html
(+22 files in other folders)
